# mvwm

./: .cvsid  .gitignore  .indent.pro  .travis.yml  ChangeLog  Makefile.am  NEWS  README.md  TODO  TRAVIS-CI  acinclude.m4  autogen.sh  configure.ac  gihub-playground  mkinstalldirs
config/: config  newFvwmButtons
doc/: Makefile.am  README  allCommands.html  fvwm-man.xsl  fvwm.xsl  groupedCommands.html  modules.html  style.css
doc/commands/: AddButtonStyle.xml  AddDecor.xml  AddTitleStyle.xml  AddToDecor.xml  AddToFunc.xml  AddToMenu.xml  All.xml  AnimatedMove.xml  Any.xml  Asterix.xml  Beep.xml  BorderStyle.xml  Break.xml  BugOpts.xml  BusyCursor.xml  ButtonState.xml  ButtonStyle.xml  ChangeDecor.xml  ChangeMenuStyle.xml  CleanupColorsets.xml  ClickTime.xml  Close.xml  ColorLimit.xml  ColormapFocus.xml  Colorset.xml  CopyMenuStyle.xml  Current.xml  CursorMove.xml  CursorStyle.xml  DefaultColors.xml  DefaultColorset.xml  DefaultFont.xml  DefaultIcon.xml  DefaultLayers.xml  Delete.xml  Deschedule.xml  Desk.xml  DesktopName.xml  DesktopSize.xml  Destroy.xml  (+137 more)
doc/docbook-xsl/manpages/: charmap.groff.xsl
doc/fvwm/: Makefile.am  bidirText.xml  bindings.xml  bugs.xml  builtinBindings.xml  colorGradients.xml  colorsets.xml  commands.xml  conditionals.xml  configuration.xml  environment.xml  execution.xml  expansion.xml  focus.xml  fonts.xml  fvwm.man.xml  images.xml  menus.xml  miscCommands.xml  moduleCommands.xml  options.xml  sessionCommands.xml  shortcuts.xml  styleCommands.xml  userFunctions.xml  virtualDesktopCommands.xml  windowMovement.xml  windowState.xml  windowStyles.xml
doc/images/: Makefile.am
doc/images/svg_rendering/: Makefile.am
doc/modules/: FvwmTabs.xml  Makefile.am  modules.html
doc/modules/images/: Makefile.am
doc/modules/images/FvwmTabs/: Makefile.am
doc/util/: scott.notes
extras/FvwmCommand/: FvwmCommand.c  FvwmCommandS.c
extras/FvwmScript/: lex.yy.c  libyywrap.c  scanner.c  y.tab.c
fvwm/: Makefile.am  add_window.c  add_window.h  bindings.c  bindings.h  borders.c  borders.h  builtins.c  builtins.h  colormaps.c  colormaps.h  colorset.c  colorset.h  commands.h  conditional.c  conditional.h  condrc.c  condrc.h  cursor.c  cursor.h  decorations.c  decorations.h  eventhandler.h  events.c  events.h  ewmh.c  ewmh.h  ewmh_conf.c  ewmh_events.c  ewmh_icons.c  ewmh_intern.h  ewmh_names.c  execcontext.c  execcontext.h  expand.c  expand.h  externs.h  focus.c  focus.h  focus_policy.c  (+61 more)
legacy/: ChangeLog  NEWS
legacy/doc/: Makefile.am
legacy/doc/commands/: BugOpts.xml  ButtonState.xml  Maximize.xml  MenuStyle.xml  PrintInfo.xml  Resize.xml  WarpToWindow.xml
legacy/doc/fvwm/: Makefile.am  expansion.xml  images.xml
legacy/doc/modules/: Makefile.am
legacy/doc/modules/images/FvwmTabs/: Makefile.am
legacy/doc/util/: genAllCommands.pl
legacy/docs/: Makefile.am
libs/: BidiJoin.c  BidiJoin.h  Bindings.c  Bindings.h  ClientMsg.c  ClientMsg.h  ColorUtils.c  ColorUtils.h  Colorset.c  Colorset.h  CombineChars.c  CombineChars.h  Cursor.c  Cursor.h  Event.c  Event.h  FBidi.c  FBidi.h  FEvent.c  FEvent.h  FGettext.c  FGettext.h  FImage.c  FImage.h  FRender.c  FRender.h  FRenderInit.c  FRenderInit.h  FRenderInterface.h  FScreen.c  FScreen.h  FShape.c  FShape.h  FShm.h  FTips.c  FTips.h  Fcursor.h  Fft.c  Fft.h  FftInterface.h  (+94 more)
modules/: .gitignore  ChangeLog  ChangeLog-pre-2.2  Makefile.am
modules/FvwmAnimate/: FvwmAnimate.c
modules/FvwmAuto/: FvwmAuto.c  Makefile.am
modules/MvwmAuto/: .cvsignore  Makefile.am  MvwmAuto.1.in  MvwmAuto.c
modules/MvwmBacker/: .cvsignore  ConfigMvwmBacker  Makefile.am  MvwmBacker.1.in  MvwmBacker.c  MvwmBacker.h
modules/MvwmButtons/: .cvsignore  BUGS  CHANGES  ConfigMvwmButtons  Makefile.am  MvwmButtons.1.in  MvwmButtons.c  MvwmButtons.h  TODO  button.c  button.h  draw.c  draw.h  dynamic.c  icons.c  icons.h  misc.c  misc.h  output.c  parse.c  parse.h
modules/MvwmCommand/: .cvsignore  Changes  Makefile.am  MvwmCommand.1.in  MvwmCommand.c  MvwmCommand.h  MvwmCommandS.c  README  fifos.c  findcmd.pl
modules/MvwmCommand/scripts/: Makefile.am  ex-auto.pl  ex-cascade.pl  ex-grpmv.pl  focus-Netscape.pl  focus-link.1  focus-link.pl  push-away.pl  test1.pl  test2.sh
modules/MvwmConsole/: .cvsignore  .gitignore  Changes  Makefile.am  MvwmConsole.1.in  MvwmConsole.c  MvwmConsole.h  MvwmConsoleC.c  MvwmConsoleC.pl.1.in  MvwmConsoleC.pl.in  getline.c
modules/MvwmCpp/: .cvsignore  Makefile.am  MvwmCpp.c  MvwmCpp.h
modules/MvwmEvent/: .cvsignore  Makefile.am  MvwmEvent.1.in  MvwmEvent.c
modules/MvwmIconMan/: .cvsignore  ConfigMvwmIconMan  Makefile.am  Mvwm.c  MvwmIconMan.1.in  MvwmIconMan.c  MvwmIconMan.h  debug.c  debug.h  debuglevels.h  functions.c  fvwm.c  globals.c  mvwm.c  readconfig.c  winlist.c  x.c  xmanager.c  xmanager.h
modules/MvwmIdent/: .cvsignore  ConfigMvwmIdent  Makefile.am  MvwmIdent.1.in  MvwmIdent.c  MvwmIdent.h
modules/MvwmPerl/: .cvsignore  .gitignore  Makefile.am  MvwmPerl.1  MvwmPerl.in
modules/MvwmProxy/: Makefile.am  MvwmProxy.1  MvwmProxy.1.in  MvwmProxy.c  MvwmProxy.h
mvwm/: Makefile.am  add_window.c  add_window.h  bindings.c  borders.c  borders.h  builtins.c  builtins.h  cmdparser.h  colormaps.c  colormaps.h  colorset.c  commands.h  conditional.c  conditional.h  condrc.c  cursor.c  decorations.c  decorations.h  eventhandler.h  events.c  events.h  ewmh.c  ewmh.h  ewmh_conf.c  ewmh_events.c  ewmh_icons.c  ewmh_intern.h  ewmh_names.c  execcontext.c  execcontext.h  expand.c  expand.h  externs.h  focus.c  focus.h  frame.c  frame.h  functable.c  functions.c  (+58 more)
perllib/: Makefile.am
perllib/MVWM/: .gitignore  Commands.pm  Constants.pm  Event.pm  EventNames.pm  Makefile.am  Module.pm.in  Tracker.pm  create-commands  create-constants
perllib/MVWM/Module/: Gtk.pm  Gtk2.pm  Makefile.am  Terminal.pm  Tk.pm  Toolkit.pm
perllib/MVWM/Tracker/: Colorsets.pm  GlobalConfig.pm  Makefile.am  ModuleConfig.pm  PageInfo.pm  Scheduler.pm  WindowList.pm
po/: Makefile.am
rewrite-notes/: parsing
utils/: BuildXLockMenu.1  Makefile.am  fvwm-menu-directory.1  fvwm-menu-headlines.1  fvwm-menu-xlock.1
(+79 files in other folders)
